--- a/app/views/reagents/show.html.erb
+++ b/app/views/reagents/show.html.erb
@@ -1,19 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>||___Name:___|</strong>
+  <strong>Nome:</strong>
   <%= @reagent.name %>
 </p>
 
 <p>
-  <strong>|___Formula:___|</strong>
+  <strong>Fórmula:</strong>
   <%= @reagent.formula %>
 </p>
 
-<p>
-  <strong>|___Quantity:___||</strong>
-  <%= @reagent.quantity %>
-</p>
 
 <%= link_to 'Edit', edit_reagent_path(@reagent) %> |
 <%= link_to 'Back', reagents_path %>
