--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="content">
-  <h1>Reagentes</h1>
+  <h1>Inventário</h1>
   <div class="row">
     <table class="col-sm-12">
       <thead>
