--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -1,32 +1,25 @@
 <p id="notice"><%= notice %></p>
-<div class="content">
-  <h1>Inventário</h1>
-  <div class="row">
-    <table class="col-sm-12">
-      <thead>
-        <tr>
-          <th>Nome</th>
-          <th>Fórmula</th>
-          <th>Quantidade</th>
-          <th colspan="3"></th>
-        </tr>
-      </thead>
 
-      <tbody>
-        <% @reagents.each do |reagent| %>
-          <tr>
-            <td><%= reagent.name %></td>
-            <td><%= reagent.formula %></td>
-            <td><%= link_to 'Mostrar', reagent, :class => 'btn btn-default btn-xs' %></td>
-            <td><%= link_to 'Editar', edit_reagent_path(reagent), :class => 'btn btn-default btn-xs' %></td>
-            <td><%= link_to 'Excluir', reagent, method: :delete,:class => 'btn btn-danger btn-xs', data: { confirm: 'Você tem certeza?' } %></td>
-          </tr>
-        <% end %>
-      </tbody>
-    </table>
+<h1>Listing Inventories</h1>
 
-    <br>
+<table>
+  <thead>
+    <tr>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
 
-  <%= link_to 'Adicionar novo', new_reagent_path %>
-  </div>
-</div>
+  <tbody>
+    <% @inventories.each do |inventory| %>
+      <tr>
+        <td><%= link_to 'Show', inventory %></td>
+        <td><%= link_to 'Edit', edit_inventory_path(inventory) %></td>
+        <td><%= link_to 'Destroy', inventory, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
+
+<br>
+
+<%= link_to 'New Inventory', new_inventory_path %>
