--- a/app/views/public_reagents/index.html.erb
+++ b/app/views/public_reagents/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 <div class="content">
-  <h1>Meu inventário de reagentes</h1>
+  <h1>Reagentes</h1>
   <div class="row">
     <table class="col-sm-12">
       <thead>
