--- a/app/views/reagents/_form.html.erb
+++ b/app/views/reagents/_form.html.erb
@@ -21,7 +21,11 @@
   </div>
   <div class="field">
     <%= f.label :quantity %><br>
-    <%= f.text_field :quantity %>
+    <%= f.number_field :quantity %>
+  </div>
+  <div class="field">
+    <%= f.label :unit %><br>
+    <%= f.select :unit, ['L', 'mL', 'Oz', 'g', 'mg', 'kg'] %>
   </div>
   <div class="actions">
     <%= f.submit %>
