--- a/app/views/reagents/index.html.erb
+++ b/app/views/reagents/index.html.erb
@@ -1,14 +1,17 @@
 <p id="notice"><%= notice %></p>
 <div class="content">
-  <h1>Meu inventário de reagentes</h1>
+  <h1>Inventário</h1>
   <div class="row">
+    <div class="col-sm-12">
+      <div class="col-sm-3"><%= link_to 'olar', public_reagents_path(order: 'ASC', attr: 'name') %></div>
+    </div>
     <table class="col-sm-12">
       <thead>
         <tr>
           <th>Nome</th>
           <th>Fórmula</th>
           <th>Quantidade</th>
-          <th colspan="3"></th>
+          <th>Ações</th>
         </tr>
       </thead>
 
@@ -17,9 +20,11 @@
           <tr>
             <td><%= reagent.name %></td>
             <td><%= reagent.formula %></td>
-            <td><%= link_to 'Mostrar', reagent, :class => 'btn btn-default btn-xs' %></td>
-            <td><%= link_to 'Editar', edit_reagent_path(reagent), :class => 'btn btn-default btn-xs' %></td>
-            <td><%= link_to 'Excluir', reagent, method: :delete,:class => 'btn btn-danger btn-xs', data: { confirm: 'Você tem certeza?' } %></td>
+            <td><%= "#{reagent.quantity} #{reagent.unit}" %></td>
+            <td>
+              <%= link_to 'Mostrar', reagent, :class => 'btn btn-default btn-xs' %>
+              <%= link_to 'Excluir', reagent, method: :delete,:class => 'btn btn-danger btn-xs', data: { confirm: 'Você tem certeza?' } %>
+            </td>
           </tr>
         <% end %>
       </tbody>
